# pwbase

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: publish.sh
src/pwbase/: __init__.py  browser.py  browser_config.py  browser_har_extractor.py  browser_session_extractor.py  browser_type.py  schema.py
tests/: conftest.py  test_browser.py  test_browser_har_extractor.py  test_browser_real.py  test_browser_session_extractor.py  test_browser_session_extractor_real.py
