[project]
name = "pwbase"
version = "0.1.0"
description = "A lightweight async Playwright wrapper for Python that supports three browser launch strategies and can intercept authenticated HTTP sessions from live browser traffic."
readme = "README.md"
authors = [
    { name = "Floyd", email = "pagarfloyd@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
pwbase = "pwbase:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "twine>=6.2.0",
]
