[project]
name = "pwbase"
version = "0.1.0"
description = "A lightweight async Playwright wrapper for Python that supports three browser launch strategies and can intercept authenticated HTTP sessions from live browser traffic."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Floyd", email = "pagarfloyd@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["playwright", "browser", "automation", "stealth", "cdp", "http", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

# Remove [project.scripts] entirely unless you have a real CLI entrypoint.
# If you do, make sure pwbase:main exists:
#   src/pwbase/__main__.py  or  src/pwbase/__init__.py  with a main() function.
#
# [project.scripts]
# pwbase = "pwbase:main"

[project.urls]
Homepage = "https://github.com/virgotagle/pwbase"
Repository = "https://github.com/virgotagle/pwbase"
Issues = "https://github.com/virgotagle/pwbase/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwbase"]   # adjust if your package is not under src/

# dev dependencies belong here, not in [dependency-groups]
# [dependency-groups] is a uv-specific key; twine/build don't read it
[project.optional-dependencies]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "twine>=6.2.0",
]